# GRIAC

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SESSIONS.md  pyproject.toml
.github/workflows/: ci.yml
api/: alembic.ini  pyproject.toml
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 0001_enable_pgvector.py  0002_table_documents.py  0003_statut_parsing.py  0004_qualification_v0.py  0005_projets_nfr.py  0006_table_chunks.py  0007_index_recherche.py  0008_workflow_sessions.py  0009_feedback_telemetrie.py  0010_levee_proposee.py  0011_conso_tokens.py  0012_parametres.py  0013_ingestion_runs.py  0014_message_traces.py  0015_edition_sessions.py  0016_document_obsolete.py  0017_projet_archive.py
api/prompts/: prompt-1-cadrer-mon-epic.md  prompt-2-decouper-mon-epic-en-features.md  prompt-3-rediger-mes-user-stories.md
api/sia_api/: albert.py  config.py  conso.py  db.py  documents.py  evaluation.py  export.py  feedback.py  gabarit.py  ingestion.py  main.py  moteur.py  parametres.py  probe.py  projets.py  recherche.py  stories.py  workflow.py  workflows.py
api/tests/: test_albert.py  test_config.py  test_conso.py  test_contexte.py  test_documents.py  test_evaluation.py  test_export.py  test_feedback.py  test_gabarit.py  test_health.py  test_ingestion.py  test_moteur.py  test_parametres.py  test_probe.py  test_projets.py  test_recherche.py  test_stories.py  test_workflow.py
docs/: albert-limits.md  backlog-fonctionnel.md  deploy-onyxia.md  eval-onyxia.md  init-pod-onyxia.md  note-cadrage-sia-po.md  refonte-ux-ui.md  sprint-1-backlog.md  sprint-2-backlog.md  sprint-3-backlog.md
docs/maquettes/: refonte-ux-ui.html
docs/plans-test/: r0-refonte-parcours-pod.md  r1-socle-dsfr.md  r10-suivi-reglages.md  r2-ecran-session.md  r3-fragments-htmx.md  r4-hypotheses-en-masse.md  r6-suppression-session.md  r7-accueil.md  r8-mes-documents.md  r9-projets.md  s0-parcours-onyxia.md  s1.10-gabarit-validateur.md  s1.11-projets.md  s1.3-ci.md  s1.4-config-secrets.md  s1.5-albert-probe.md  s1.6-helm.md  s1.7-ingest-scan.md  s1.8-ingest-parse.md  s1.9-ingest-qualify.md  s2.1-chunking.md  s2.10-feedback-telemetrie.md  s2.11-harnais-evals.md  s2.12-controle-dor-auto.md  s2.13-rapprochement-a8.md  s2.13-scenario-rejeu-pod.md  s2.14-modele-chat-medium.md  s2.15-anti-invention.md  s2.2-embeddings.md  s2.3-recherche-hybride.md  s2.4-rerank-contexte.md  s2.5-workflow-etats.md  s2.6-moteur.md  s2.7-export.md  s2.8-ui-conversation.md  s2.9-ecrans-projet-documents.md  s3.10-corpus-ui.md  s3.11-conso-tokens.md  s3.12-modele-ui.md  s3.13-confort-po.md  (+10 more)
evals/: grille-notation.md
evals/fixtures/projet-alpha/: spec-authentification_v1.docx  spec-authentification_v2_final_VF3 - Copie.docx
evals/fixtures/projet-beta/: notes-reunion-2026-06-15.txt
evals/silver/: stories-silver-candidates.md
infra/: compose.yaml
infra/docker/: api.Dockerfile  web.Dockerfile
infra/helm/sia-po/: Chart.yaml  values.yaml
infra/helm/sia-po/templates/: _helpers.tpl  api.yaml  ingress.yaml  migrate-job.yaml  postgres.yaml  web.yaml
infra/k8s/: secret-albert.example.yaml
infra/onyxia/: pod-up.sh
ingestion/: pyproject.toml
ingestion/sia_ingestion/: __init__.py  chunk.py  embed.py  parse.py  pipeline.py  qualify.py  scan.py
ingestion/tests/: test_chunk.py  test_embed.py  test_parse.py  test_pipeline.py  test_qualify.py  test_scan.py
tests/: test_sanity.py
web/: pyproject.toml
web/sia_web/: api_client.py  main.py
web/sia_web/templates/: _fragment_echange.html  _message.html  _meta_session.html  _rail_hypotheses.html  _rail_sources.html  _rail_stories.html  _stepper.html  archivees.html  base.html  document.html  documents.html  erreur.html  index.html  parametres.html  projet.html  projets.html  session.html  suivi.html  telemetrie.html
web/tests/: test_health.py  test_ui.py
