[project]
name = "sia-po"
version = "0.1.0"
description = "SIA PO — assistant de rédaction de user stories (racine du workspace)"
requires-python = ">=3.12,<3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["api", "web", "ingestion"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=8",
    "pre-commit>=4",
]

# Configuration partagée par tout le monorepo (api, web, ingestion) —
# source unique : pas de config lint/test par membre.
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["sia_api", "sia_web", "sia_ingestion"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests", "api/tests", "web/tests", "ingestion/tests"]
