[project]
name = "sia-ingestion"
version = "0.1.0"
description = "SIA PO — pipeline d'ingestion : scan, parsing, qualification, chunking, embeddings"
requires-python = ">=3.12,<3.13"
dependencies = [
    "psycopg[binary]>=3.2",
]

# docling, boto3 (S3/MinIO) et le client Albert (embeddings) rejoindront ces
# dépendances avec S1.8+ ; S1.7 ne fait que scanner un dossier local.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sia_ingestion"]
