[project]
name = "sia-ingestion"
version = "0.1.0"
description = "SIA PO — pipeline d'ingestion : scan, parsing, qualification, chunking, embeddings"
requires-python = ">=3.12,<3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "docling>=2.15",
    "pypdf>=5",
]

# docling est volontairement importé paresseusement (torch, lourd) : les TU ne
# le chargent jamais. pypdf sert à détecter les PDF sans couche texte (S1.8).
# boto3 (S3/MinIO) et le client Albert (embeddings) arrivent avec la suite d'E1.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sia_ingestion"]
