[project]
name = "sia-web"
version = "0.1.0"
description = "SIA PO — interface PO"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

# httpx : client serveur -> api (E4) ; python-multipart : formulaires HTML.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sia_web"]
