[project]
name = "sia-web"
version = "0.1.0"
description = "SIA PO — interface PO"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "markdown-it-py>=3.0",
]

# httpx : client serveur -> api (E4) ; python-multipart : formulaires HTML ;
# markdown-it-py : rendu serveur des messages du moteur (S3.6 — tableaux
# Gherkin lisibles), HTML source échappé (html=False).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sia_web"]
